#9 Удалил, телеграмм-начало, улучшил